# PyTannic

./: 404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: python-CI.yml
client/: index.html
docs/: client.md  header.md  index.md  torch.md
header/: index.html
pytannic/torch/: modules.py  types.py
tests/torch/: test_serialization.py
torch/: index.html
