[project]
name = "pytannic"
version = "0.1.0"
description = "Python bindings for the Tannic framework"
authors = [
    {name = "entropy-flux",email = "eric.m.cardozo@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)"
]


[project.optional-dependencies]
torch = ["torch (>=2.7.1,<3.0.0)"]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"