[tool.poetry]
name = "pytannic"
version = "0.1.0"
description = "Python bindings for the Tannic framework"
authors = ["entropy-flux <eric.hermosis.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.1"
torch = "^2.7.1"
numpy = "^2.3.1"
torchvision = "^0.22.1"
matplotlib = "^3.10.3"
torcheval = "^0.0.7"
torchsystem = "^1.4.4"
mltracker = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
